--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,7 @@
+html {
+  background-color: black;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -10,4 +14,47 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+h1, h2, h3, h4, p {
+  color: white;
+}
+
+h1, h2, h3, h4 {
+  font-weight: 400;
+}
+
+
+h1 {
+  font-weight: 400;
+  font-size: 3.5em;
+  margin-left: 1%
+}
+
+h2 {
+  font-size: 3em;
+  font-weight: 400;
+}
+
+h3 {
+  font-size: 2em;
+}
+
+p {
+  line-height: 1.4;
+}
+
+.box {
+  border: 1px solid  #404040
+  ;
+  width: 50%;
+  border-radius: 2px;
+  margin: 1% auto;
+  /* background-color: #0d0d0d; */
+  background-image: linear-gradient(to right, black , #1a1a1a);
+}
+
+.box > * {
+  margin: 5%;
+  
 }
